--- a/src/pages/Register/register.scss
+++ b/src/pages/Register/register.scss
@@ -1,16 +1,31 @@
 .main-page {
   display: flex;
   height: 100%;
+  box-sizing: border-box;
 }
 
 .left {
   flex: 1;
-  background-color: red;
+  background-color: gray;
   height: 100%;
+  .bg-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
 
 .right {
   width: 460px;
-  background-color: blue;
+  background-color: rgb(255, 255, 255);
   height: 100%;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  .title {
+    font-size: 20px;
+    font-weight: bold;
+    color: #2d2d2d;
+  }
 }
