--- a/src/components/atoms/Button/button.scss
+++ b/src/components/atoms/Button/button.scss
@@ -1,12 +1,18 @@
 .button {
   padding: 12px;
   font-size: 16px;
-  background-color: #f2d6c9;
   width: 100%;
-  box-sizing: border-box;
-  border-radius: 12px;
-  border: none;
-  color: white;
   text-transform: uppercase;
   cursor: pointer;
+  @include border-radius(15px);
+  -webkit-box-shadow: 0px 24px 36px -11px rgba(0, 0, 0, 0.09);
+  -moz-box-shadow: 0px 24px 36px -11px rgba(0, 0, 0, 0.09);
+  box-shadow: 0px 24px 36px -11px rgba(0, 0, 0, 0.09);
+  &:hover,
+  &:active,
+  &:focus {
+    outline: none;
+  }
+  @include button-variant(#f2d6c9, transparent);
+  color: #bbbbbb;
 }
