--- a/src/pages/CreateBlog/createBlog.scss
+++ b/src/pages/CreateBlog/createBlog.scss
@@ -1,14 +1,8 @@
-.blog-post {
-  padding-top: 40px;
-  .title {
-    font-size: 20px;
-    font-weight: bold;
-    margin: 0px;
-    margin-bottom: 20px;
-  }
-  .button-action {
-    width: 200px;
-    margin-left: auto;
-    margin-right: 0px;
-  }
+.button-action {
+  width: 300px;
+  margin-left: auto;
+  margin-right: 0px;
+  padding: 12px 12px;
+  display: flex;
+  justify-content: space-between;
 }
