--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -19,4 +19,11 @@
     display: flex;
     margin: auto;
   }
+  .text-page {
+    font-size: 24px;
+    width: 380px;
+    text-align: center;
+    font-weight: bold;
+    margin: 0px;
+  }
 }
