--- a/src/components/molecules/Blogitem/blogitem.scss
+++ b/src/components/molecules/Blogitem/blogitem.scss
@@ -3,3 +3,27 @@
   height: 200px;
   object-fit: cover;
 }
+
+.title-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  .edit-wrapper {
+    display: flex;
+    align-items: center;
+    .edit {
+      font-weight: bold;
+      color: #03a9f4;
+      cursor: pointer;
+      margin: 0px;
+      margin-right: 14px;
+    }
+    .delete {
+      font-weight: bold;
+      color: red;
+      cursor: pointer;
+      margin: 0px;
+      margin-left: 14px;
+    }
+  }
+}
